--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <title>Meu portfólio</title>
       </head>
 <body>
-    <img src="img/~capivara.webp" alt="avatar da Annelise" srcset="">
-    <p>Eu sou Annelise_</p>
+  <header class="container">
+    <img src="img/capivara.web.webp" alt="avatar da Annelise" srcset="">
+    <p>Eu sou Annelise</p>
     <h1>Eu ensino como fazer bolo de pote</h1>
     <p>Sou Confeiteira e Chef de cozinha. Ensino a fazer e vender bolos de pote na internet. Tenho uma confeitaria no Rio de Janeiro e te convido a conhecer mais sobre mim! </p>
     <p>Minhas habilidades</p>
