--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
         <title>Meu portfólio</title>
       </head>
 <body>
-  <header class="container">
-    <img src="img/capivara.web.webp" alt="avatar da Annelise" srcset="">
-    <p>Eu sou Annelise</p>
+  <header class="container text-center">
+    <img src="img/capivara.web.webp" alt="avatar da Annelise" class="rounded-circle" width="150" height="150" srcset="">
+    <p class="lead">Eu sou Annelise</p>
     <h1>Eu ensino como fazer bolo de pote</h1>
-    <p>Sou Confeiteira e Chef de cozinha. Ensino a fazer e vender bolos de pote na internet. Tenho uma confeitaria no Rio de Janeiro e te convido a conhecer mais sobre mim! </p>
-    <p>Minhas habilidades</p>
+    <p>Olá! Sou Confeiteira e Chef de Cozinha, apaixonada por transformar sonhos em sabores inesquecíveis. 💖 Ensino a fazer e vender bolos de pote na internet, ajudando futuros confeiteiros a prosperarem no mundo digital. Também sou fundadora de uma confeitaria no Rio de Janeiro, e te convido a conhecer mais sobre o meu trabalho! </p>
+    <p>Minhas Conquistas</p>
     <div>
-            <p>Especialista em vendas digitais</p>
-            <p>Confeiteira Senior</p>
-            <p>Formada em gastronomia pela USP</p>
-            <p>Experiencia na Le Cordon Bleu</p>
+      <p class="badge bg-secondary">✨ Criação de Receitas Exclusivas e Criativas</p>
+      <p class="badge bg-secondary">🧁 Especialista em Bolos de Pote Gourmet</p>
+      <p class="badge bg-secondary">📚 Formação em Gastronomia (USP) + Especialização na Le Cordon Bleu</p>
+      <p class="badge bg-secondary">💻 Vendas Digitais: da Confeitaria para o Mundo</p>
+      <p class="badge bg-secondary">🎨 Domínio em Decorar Doces de Forma Artística</p>
+      <p class="badge bg-secondary">🤝 Mentora de Novos Confeiteiros Empreendedores</p>
     </div>
 <body>
     <header class="container">
