--- a/index.html
+++ b/index.html
@@ -23,9 +23,21 @@
       <p class="badge bg-secondary">🤝 Mentora de Novos Confeiteiros Empreendedores</p>
     </div>
 <body>
-    <header class="container">
-      <!-- código omitido -->
-    </header>
+</header>
+<main class="container">
+    <h2>Meus projetos</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title"> Mentorias</h5>
+                  <p class="card-text">Através das minhas mentorias personalizadas, ajudo confeiteiros a transformarem talento em negócio de sucesso no mundo digital. Juntos, criamos estratégias práticas para você prosperar vendendo seus bolos de pote!</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+        </div>
+    </div>
   
   
     <script
