--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       </head>
 <body>
   <header class="container text-center">
-    <img src="img/capivara.web.webp" alt="avatar da Annelise" class="rounded-circle" width="150" height="150" srcset="">
+    <img src="img/foto de perfil.png" alt="avatar da Annelise" class="rounded-circle" width="150" height="150" srcset="">
     <p class="lead">Eu sou Annelise</p>
     <h1>Eu ensino como fazer bolo de pote</h1>
     <p>Olá! Sou Confeiteira e Chef de Cozinha, apaixonada por transformar sonhos em sabores inesquecíveis. 💖 Ensino a fazer e vender bolos de pote na internet, ajudando futuros confeiteiros a prosperarem no mundo digital. Também sou fundadora de uma confeitaria no Rio de Janeiro, e te convido a conhecer mais sobre o meu trabalho! </p>
@@ -24,22 +24,106 @@
     </div>
 <body>
 </header>
-<main class="container">
+<main class="container mt-5">
     <h2>Meus projetos</h2>
     <div class="row">
+        <!-- Projeto 1 -->
         <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+            <div class="card">
+                <img src="img/cozinha.png" class="card-img-top" alt="Imagem da cozinha">
                 <div class="card-body">
-                  <h5 class="card-title"> Mentorias</h5>
-                  <p class="card-text">Através das minhas mentorias personalizadas, ajudo confeiteiros a transformarem talento em negócio de sucesso no mundo digital. Juntos, criamos estratégias práticas para você prosperar vendendo seus bolos de pote!</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Mentorias: Como ter uma historia de sucesso?</h5>
+                    <p class="card-text">Através das minhas mentorias personalizadas, ajudo confeiteiros a transformarem talento em negócio de sucesso no mundo digital. Juntos, criamos estratégias práticas para você prosperar vendendo seus bolos de pote!.
+                    </p>
+                    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Saiba mais</button>
                 </div>
-              </div>
+            </div>
+        </div>
+        <!-- Projeto 2 -->
+        <div class="col-md-4">
+            <div class="card">
+                <img src="img/foto velha.png" class="card-img-top" alt="Imagem da mulher">
+                <div class="card-body">
+                    <h5 class="card-title"> Quer saber como cheguei até aqui? Saiba mais da minha história!</h5>
+                    <p class="card-text">Minha paixão pela confeitaria começou ainda na infância e me levou a cursar Gastronomia na universidade. Ao longo da minha trajetória, enfrentei desafios e conquistei muitas coisas. Hoje, compartilho meu conhecimento para inspirar e guiar novos confeiteiros!</p>
+                    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Saiba mais</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Projeto 3 -->
+        <div class="col-md-4">
+            <div class="card">
+                <img src="img/bolo de pote.png" class="card-img-top" alt="bolo de pote">
+                <div class="card-body">
+                    <h5 class="card-title">Quer ter acesso a receitas exclusivas?
+                    </h5>
+                    <p class="card-text">Descubra o poder das receitas únicas! Desenvolvi combinações exclusivas e criativas para bolos de pote que encantam clientes e tornam qualquer marca inesquecível.
+                    </p>
+                    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Ver curso</button>
+                </div>
+            </div>
         </div>
     </div>
-  
-  
+  </main>
+   <!-- Modal 1 -->
+   <div class="modal" id="modal1" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Mentorias: Como ter uma historia de sucesso?</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Imagine ter alguém ao seu lado para te orientar em cada etapa da sua jornada na confeitaria. Nas minhas mentorias, ofereço um acompanhamento próximo e personalizado para quem quer transformar a paixão por bolos de pote em um negócio de sucesso no mundo digital. Mais do que ensinar receitas, eu te ajudo a construir estratégias sólidas para divulgação, vendas online, atendimento ao cliente e crescimento da sua marca. Durante nossas sessões, vamos alinhar seus sonhos com metas reais, criar um plano de ação adaptado à sua realidade e superar juntos cada desafio que aparecer. Meu objetivo é ver você prosperar, alcançar sua independência financeira e se tornar referência no mercado. Com minha experiência prática, formação acadêmica e amor pela confeitaria, estou pronta para caminhar ao seu lado rumo ao sucesso!</p>
+                <img src="img/cozinha 1.jpeg" class="img-fluid w-100" alt="Imagem representativa da cozinha">
+            </div>
+        </div>
+    </div>
+</div>
+ <!-- Modal 2 -->
+ <div class="modal" id="modal2" tabindex="-1">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Quer saber como cheguei até aqui? Saiba mais da minha história!</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <p>Minha paixão pela confeitaria começou cedo, na cozinha da casa onde cresci. Desde pequena, observar o brilho nos olhos das pessoas ao saborear um doce me encantava. Com o tempo, esse amor virou propósito: decidi que queria transformar sentimentos em sabores que tocassem o coração das pessoas. Segui meu sonho e me formei em Gastronomia, buscando aprimorar minhas técnicas e conhecimentos. Mais tarde, me especializei na arte dos bolos de pote, desenvolvendo receitas exclusivas que uniam criatividade, sabor e apresentação impecável. Empreendi, fundei minha confeitaria no Rio de Janeiro e mergulhei também no mundo digital para expandir meu trabalho. Hoje, com anos de experiência, ensino confeiteiros iniciantes e avançados a encontrarem seu espaço nesse mercado encantador. Minha história é feita de desafios, superações e muitas conquistas — e é com alegria que compartilho cada aprendizado com você.
+              </p>
+              <img src="img/foto de perfil.png" class="img-fluid w-100"
+                  alt="Imagem da foto de perfil">
+          </div>
+      </div>
+  </div>
+</div>
+
+<!-- Modal 3 -->
+<div class="modal" id="modal3" tabindex="-1">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Quer ter acesso a receitas exclusivas?</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <p>Acredito que um doce deve ir além do sabor: ele deve contar uma história, emocionar e deixar uma lembrança inesquecível. Foi com essa visão que criei minhas receitas exclusivas de bolos de pote. Cada combinação de ingredientes é pensada para surpreender e encantar, equilibrando texturas, sabores e uma apresentação irresistível. Minhas receitas unem técnicas da confeitaria clássica com toques criativos, resultando em produtos que se destacam em qualquer vitrine. Além disso, busco inspiração em tendências internacionais, experiências pessoais e nas preferências dos clientes, garantindo um cardápio sempre atual e apaixonante. Ao aprender essas receitas, você não está apenas adicionando novos sabores ao seu repertório — está adquirindo diferenciais que podem transformar o seu negócio em uma referência no mercado.</p>
+              <img src="img/livro de receitas.jpg" alt="livro de receitas" class="img-fluid w-100">
+          </div>
+      </div>
+  </div>
+</div>
+
+
+  <footer class="container py-5">
+      <h2>Entre em contato</h2>
+      <div>
+          <a href="https://github.com/16lgtb20241M">GitHub</a>
+      </div>
+      <p class="my-5 text-center">© Copyright 2025. Produzido por Letícia Brasil 2-P</p>
+  </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
